--- a/srcs/services/frontend/src/css/profile.css
+++ b/srcs/services/frontend/src/css/profile.css
@@ -7,12 +7,12 @@
 	  border-radius: 50%;
 }
 
-.card-body {
+/* .card-body {
     opacity : .6;
     background-color : #7000ff;
     height: 120% !important;
     overflow-y: auto;
-}
+} */
 
 .friendvatar {
     display: block!important;
